--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Build e Push da imagem Docker
         run: |
+          aws ecr create-repository --repository-name mlops-lambda-container
           aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com
           docker build -t mlops-lambda-container .
           docker tag mlops-lambda-container:latest ${{ secrets.ACCOUNT_ID }}.dkr.ecr.us-west-2.amazonaws.com/mlops-lambda-container:latest
