--- a/lambda.yaml
+++ b/lambda.yaml
@@ -5,7 +5,7 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: mlops780-lambda-container-model
-      Role: !GetAtt Role.Arn
+      Role: !GetAtt RoleLambdaContainer.Arn
       PackageType: Image
       Code:
         ImageUri: 133562267374.dkr.ecr.us-west-2.amazonaws.com/mlops780-lambda-container:latest
